--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
+@font-face {
+    font-family: Avenir;
+    src: url(AvenirNext.otf);
+}
+
 * {
-    font-family: 'Calibri Regular', serif;
+    font-family: Avenir, 'Calibri Regular', serif;
 }
 
 body {
@@ -34,7 +39,7 @@ nav {
 }
 
 nav img {
-    max-width: 180px;
+    max-width: 170px;
 }
 
 ul {
@@ -126,7 +131,6 @@ header {
 
 .price-list {
     text-align: center;
-    padding-bottom: 5%;
 }
 
 .about {
@@ -144,11 +148,12 @@ table, th, td {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .THElist {
     margin: 0 auto;
-    max-width: 1300px;
+    max-width: 1210px;
 }
 
 .price-table {
@@ -156,10 +161,6 @@ table, th, td {
     flex-direction: column;
     align-items: center;
     padding: 15px;
-}
-
-footer {
-    margin-top: 5%;
 }
 
 footer > .row {
@@ -170,9 +171,9 @@ footer p {
     margin-bottom: 0;
 }
 
-footer h2 {
-    border-left: 3px solid white;
-    padding-left: 8px;
+.custom-img {
+    width: 85%;
+    border-radius: 25%;
 }
 
 .fb-footer {
@@ -188,12 +189,14 @@ footer h2 {
     font-weight: 600;
 }
 
-#contacts h2 {
+#contacts * {
     color: white;
+    font-family: 'Calibri Regular', serif;
 }
 
-#contacts p {
-    font-size: 20px;
+#contacts img {
+    width: 106%;
+    border-radius: 9%;
 }
 
 .e-mail {
@@ -212,7 +215,7 @@ footer h2 {
 }
 
 .placeholder-image {
-    width: 65%;
+    max-width: 255px;
 }
 
 @media screen and (max-width: 1325px) {
